// Copyright (c) Abstract Machines
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package groups.v1;

import "common/v1/common.proto";

option go_package = "github.com/absmach/supermq/internal/grpc/groups/v1";

// GroupssService is a service that provides groups 
// functionalities for SuperMQ services.
service GroupsService {
  rpc RetrieveEntity(common.v1.RetrieveEntityReq)
    returns (common.v1.RetrieveEntityRes){}
}
